# AutoUtils

./: .gitignore  Array.au3  AutoUtils.code-workspace  BigMask.au3  CMakeLists.txt  CallbackArray.au3  Dll.au3  Endian.au3  FlagArray.au3  Function.au3  IndexArray.au3  Integer.au3  LICENSE.md  PrefixedArray.au3  README.md  String.au3  UnitTest.au3  Vector.au3  Win32.au3
.github/: FUNDING.yml
.github/workflows/: Unittests.yml  test_and_release.yml
Arrays/: CallbackArray.au3  FlagArray.au3  PrefixedArray.au3  Vector.au3
Arrays/Tests/: TestVector.au3
AutoUtils/: ApiErrorCodes.au3  Dll.au3  DllHandles.au3  FlagArray.au3  Vector.au3
AutoUtils/Arrays/: Vector.au3
AutoUtils/Arrays/Tests/: TestFlagArray.au3  TestVector.au3
AutoUtils/Deprecated/: ScanBinaryDllForExportedFunctions.au3
AutoUtils/Tests/: TestDll.au3  TestFlagArray.au3  TestVector.au3
AutoUtils/Win32/: Constants.au3  Dll.au3  Memory.au3  StructTags.au3
AutoUtils/Win32/Deprecated/: ScanBinaryDllForExportedFunctions.au3
AutoUtils/Win32/Tests/: TestDll.au3
Deprecated/: ScanBinaryDllForExportedFunctions.au3
Docs/: README.md
Docs/Arrays/: CallbackArrays.md  FlagArray.md  PrefixedArrays.md  README.md
Examples/: _Dll_CloseAll..au3  _Dll_GetProcAddress.au3
Tests/: Test.au3  TestBigMask.au3  TestCallbackArray.au3  TestDll.au3  TestIndexArray.au3  TestVector.au3
UtilsForAutoIt/: Dll.au3  Vector.au3
UtilsForAutoIt/Examples/: _Dll_Close.au3  _Dll_GetModuleExist.au3  _Dll_Open.au3  _Dll_Shutdown.au3
UtilsForAutoIt/Tests/: TestDll.au3
cpp/: Build.bat  Compile.bat  Open.bat  README.md
cpp/include/: macros.h
cpp/src/: Console.cpp  DllMain.cpp  pch.h
